classDiagram
%% ---------- DOMAIN ----------
class Bus {
    +BusId: string
    +Model: BusModel
    +Route: RouteName
    +BatteryCapacity: double
    +BatteryLevel: double
    +Consumption: double
    +Status: BusStatus
    +TimeLeftUntil13Percent(avgKmh: double): TimeSpan
}

Bus --> BusModel
Bus --> RouteName
Bus --> BusStatus

%% ---------- PERSISTENCE ----------
class FileHelper {
    +LoadBusesAsync(): Task<List~Bus~>
}

%% ---------- VIEW-MODELS ----------
class BusListViewModel {
    -fileHelper: FileHelper
    +Buses: ObservableCollection~Bus~
    +GetSelectedBus(): Bus
}

class BusDetailViewModel {
    +SelectedBus: Bus
    +Validate(bus: Bus): bool         /* ID exists, Battery 0-100 */
}

BusListViewModel ..> FileHelper
BusListViewModel --> Bus
BusDetailViewModel --> Bus
